beginning stages of vanilla js mobile menu

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <!-- Banner and Navigation -->
   <header>
     <nav class="nav">
+      <div class="nav__content">
       <a class="nav__home" href="#">
         <img class="nav__logo" src="./resources/images/pool-pros-logo.png">
       </a>
@@ -22,6 +23,7 @@
       <a class="nav__link" href="#">
         <img class="nav__button" src="./resources/images/menu-icon-mobile.png">
       </a>
+      </div>
       <div class="nav__menu">
         <a href="#" class="nav__close">X</a>
         <h3 class="nav__title">MENU</h3>
