sass folder additions

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
     </nav>
     <div class="top">
       <div class="top__content">
-        <ul>
-          <a href="http://www.hudsonpooldist.com/" target="_blank"><li>Dealers and Distributors</li></a>
-          <a href="http://americanpool.com/services/pool-maintenance-services/" target="_blank"><li>Commercial Service</li></a>
+        <ul class="top__list">
+          <a href="http://www.hudsonpooldist.com/" target="_blank"><li class="top__item">Dealers and Distributors</li></a>
+          <a href="http://americanpool.com/services/pool-maintenance-services/" target="_blank"><li class="top__item">Commercial Service</li></a>
         </ul>
       </div>
     </div>
