--- a/index.html
+++ b/index.html
@@ -261,11 +261,11 @@
     <div class="footer footer--top">
       <img class="footer__logo" src="./resources/images/pool-pros-logo-footer.png">
       <div class="footer__social">
-        <span>CONNECT WITH US</span>
+        <span class="footer__connect">CONNECT WITH US</span>
         <div class="footer__icons">
-          <a href="https://twitter.com/"><img src="./resources/images/twitter-icon.png"></a>
-          <a href="https://facebook.com/"><img src="./resources/images/facebook-icon.png"></a>
-          <a href="https://youtube.com/"><img src="./resources/images/youtube-icon.png"></a>
+          <a href="https://twitter.com/"><img class="footer__img" src="./resources/images/twitter-icon.png"></a>
+          <a href="https://facebook.com/"><img class="footer__img" src="./resources/images/facebook-icon.png"></a>
+          <a href="https://youtube.com/"><img class="footer__img" src="./resources/images/youtube-icon.png"></a>
         </div>
       </div>
     </div>
