updated filters button

--- a/index.html
+++ b/index.html
@@ -65,7 +65,10 @@
   <section class="filters">
     <div class="filters__head">
       <span class="filters__result">7 dealers in 28226</span>
-      <a class="filters__mobile" href="#">Filter Results &#x25BE;</a>
+      <a class="filters__mobile" href="#">
+        <span class="filters__title">Filter Results</span>
+        <span class="filters__arrow">&#x25BE;</span>
+      </a>
       <span class="filters__desktop">Filter Results</span>
     </div>
     <form class="filters__form">
