background-color update

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <span class="filters__title">Filter Results</span>
         <span class="filters__arrow">&#x25BE;</span>
       </a>
-      <span class="filters__desktop">Filter Results</span>
+      <span class="filters__title--desktop">Filter Results</span>
     </div>
     <form class="filters__form">
       <span><input class="filters__input" type="checkbox"><label class="filters__label">Service</label></span><br>
