--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
           <input class="modal__input" type="email" id="mail" name="user_email">
         </fieldset>
         <fieldset>
-          <label>Comments or questions</label>
+          <label class="modal__label">Comments or questions</label>
           <textarea class="modal__textarea" id="comment" name="user_comment"></textarea>
           <div class="modal__question">
             <p class="modal__newsletter">Do you currently own a pool or spa?</p>
