further modal changes

--- a/index.html
+++ b/index.html
@@ -236,8 +236,10 @@
         <fieldset>
           <label class="modal__label">First and last name</label>
           <input class="modal__input" type="text" id="name" name="user_name">
+          
           <label class="modal__label">Phone Number</label>
-          <input class="modal__input" type="text" id="number" name="user_number">
+          <input class="modal__input--num" type="text" id="number" name="user_number">
+
           <label class="modal__label">Email Address</label>
           <input class="modal__input" type="email" id="mail" name="user_email">
         </fieldset>
