--- a/index.html
+++ b/index.html
@@ -222,45 +222,48 @@
     </div>
   </main>
 
-<!-- Contact Modal for Business -->
-<div class="modal">
+<!-- Contact Modal Start -->
+<section class="modal">
   <div class="modal__content">
     <span class="modal__close">&times;</span>
     <div class="modal__head">
       <p class="modal__email">EMAIL</p>
       <h1 class="modal__title">Pool Pros</h1>
     </div>
+    <!-- Form -->
     <form class="modal__form">
-      <legend class="modal__legend"><p class="modal__contact">Fill out the form below and a Pool Pro will get in touch.</p></legend>
-      <div class="modal__inputs">
-        <fieldset>
-          <label class="modal__label">First and last name</label>
-          <input class="modal__input" type="text" id="name" name="user_name">
-          
-          <label class="modal__label">Phone Number</label>
-          <input class="modal__input--num" type="text" id="number" name="user_number">
+      <p class="modal__contact">Fill out the form below and a Pool Pro will get in touch.</p>
+      <fieldset class="modal__inputs">
+        <label class="modal__label">First and last name</label>
+        <input class="modal__input" type="text" id="name" name="user_name">
+        
+        <label class="modal__label">Phone Number</label>
+        <input class="modal__input--num" type="text" id="number" name="user_number">
 
-          <label class="modal__label">Email Address</label>
-          <input class="modal__input" type="email" id="mail" name="user_email">
-        </fieldset>
-        <fieldset>
-          <label class="modal__label">Comments or questions</label>
-          <textarea class="modal__textarea" id="comment" name="user_comment"></textarea>
-          <div class="modal__question">
-            <p class="modal__newsletter">Do you currently own a pool or spa?</p>
-            <div class="modal__radios">
-              <input class="modal__input--radio" type="radio" id="question" value="answer_question" name="user_answer"><label class="modal__light" for="news">Yes</label>
-              <input class="modal__input--radio" type="radio" id="question" value="answer_question" name="user_answer"><label class="modal__light" for="news">No</label>
-            </div>
-          </div>
-        </fieldset>
-        <div class="modal__button">
-          <button class="modal__submit" type="submit">Send</button>
+        <label class="modal__label">Email Address</label>
+        <input class="modal__input" type="email" id="mail" name="user_email">
+
+        <label class="modal__label">Comments or questions</label>
+        <textarea class="modal__textarea" id="comment" name="user_comment"></textarea>
+
+        <label class="modal__label">Do you currently own a pool or spa?</label>
+        <div class="modal__radios">
+          <input class="modal__input--radio" type="radio" value="yes"><label class="modal__light">Yes</label>
+          <input class="modal__input--radio" type="radio" value="no"><label class="modal__light" for="news">No</label>
         </div>
-      </div>
+        <input class="modal__submit" type="submit" value="Send">
+        <div class="modal__desktop">
+          <div class="modal__submit--container">
+            <input class="modal__submit--desktop" type="submit" value="Send my email">
+            <img class="modal__arrow" src="./resources/images/next-arrow.png">
+          </div>
+        </div>
+      </fieldset>
     </form>
+    <!-- Form End -->
   </div>
-</div>
+</section>
+<!-- Contact Modal End -->
 
 
   <!-- Footer Section -->
