--- a/index.html
+++ b/index.html
@@ -228,11 +228,11 @@
     <span class="modal__close">&times;</span>
     <div class="modal__head">
       <p class="modal__email">EMAIL</p>
-      <h1 class="modal__title">Pool Pros</h1>
+      <h1 class="modal__business">Pool Pros</h1>
     </div>
     <!-- Form -->
     <form class="modal__form">
-      <p class="modal__contact">Fill out the form below and a Pool Pro will get in touch.</p>
+      <p class="modal__action">Fill out the form below and a Pool Pro will get in touch.</p>
       <fieldset class="modal__inputs">
         <label class="modal__label">First and last name</label>
         <input class="modal__input" type="text" id="name" name="user_name">
@@ -286,7 +286,7 @@
   </footer>
 
   <!-- JavaScript -->
-  <script src="./resources/js/custom.js"></script>
+  <script src="./resources/js/main.js"></script>
   <script src="./resources/js/ss-pika.js"></script>
 </body>
 </html>
