--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   </section>
 
   <!-- Main Section Results -->
-  <main class="business__container">
+  <main id="main" class="business__container">
     <!-- Business 1 -->
     <div class="business business--one">
       <h1 class="business__title">Aqua Experts</h1><br>
