added modal circles

--- a/index.html
+++ b/index.html
@@ -228,12 +228,15 @@
     <form class="modal__form">
       <p class="modal__action">Fill out the form below and a Pool Pro will get in touch.</p>
       <fieldset class="modal__inputs">
+        <img class="modal__circle--one" src="./resources/images/circle-form.png">
         <label class="modal__label">First and last name</label>
         <input class="modal__input" type="text" id="name" name="user_name">
         
+        <img class="modal__circle--two" src="./resources/images/circle-form.png">
         <label class="modal__label">Phone Number</label>
         <input class="modal__input--num" type="text" id="number" name="user_number">
 
+        <img class="modal__circle--three" src="./resources/images/circle-form.png">
         <label class="modal__label">Email Address</label>
         <input class="modal__input" type="email" id="mail" name="user_email">
 
