--- a/index.html
+++ b/index.html
@@ -225,20 +225,20 @@
       <h1 class="modal__business">Pool Pros</h1>
     </div>
     <!-- Form -->
-    <form class="modal__form">
+    <form class="modal__form" name="modal__form" onsubmit="return formValidate()">
       <p class="modal__action">Fill out the form below and a Pool Pro will get in touch.</p>
       <fieldset class="modal__inputs">
         <img class="modal__circle modal__circle--one" src="./resources/images/circle-form.png">
         <label class="modal__label">First and last name</label>
-        <input class="modal__input modal__input--name" type="text" oninput="imgValidate()">
+        <input class="modal__input modal__input--name" name="name" type="text" oninput="imgValidate()">
         
         <img class="modal__circle modal__circle--two" src="./resources/images/circle-form.png">
         <label class="modal__label">Phone Number</label>
-        <input class="modal__input--num" type="text" oninput="imgValidate()" >
+        <input class="modal__input--num" name="number" type="text" oninput="imgValidate()">
 
         <img class="modal__circle modal__circle--three" src="./resources/images/circle-form.png">
         <label class="modal__label">Email Address</label>
-        <input class="modal__input modal__input--email" type="email" oninput="imgValidate()">
+        <input class="modal__input modal__input--email" name="email" type="email" oninput="imgValidate()">
 
         <label class="modal__label">Comments or questions</label>
         <textarea class="modal__textarea" id="comment" name="user_comment"></textarea>
