updated color secondary

--- a/index.html
+++ b/index.html
@@ -240,9 +240,11 @@
         <label class="modal__label">Email Address</label>
         <input class="modal__input modal__input--email" name="email" type="email" oninput="imgValidate()">
 
+        <span class="modal__opt">optional</span>
         <label class="modal__label">Comments or questions</label>
         <textarea class="modal__textarea" id="comment" name="user_comment"></textarea>
 
+        <span class="modal__opt--dk">optional</span>
         <label class="modal__label">Do you currently own a pool or spa?</label>
         <div class="modal__radios">
           <input class="modal__input--radio" type="radio" value="yes"><label class="modal__light">Yes</label>
